_generated-doc/3.34/config/quarkus-container-image-buildpack_quarkus.buildpack.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-jvm-builder-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-jvm-builder-image[`+++quarkus.buildpack.jvm-builder-image+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.jvm-builder-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The buildpacks builder image to use when building the project in jvm mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_JVM_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_JVM_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++paketocommunity/builder-ubi-base:latest+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-native-builder-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-native-builder-image[`+++quarkus.buildpack.native-builder-image+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.native-builder-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The buildpacks builder image to use when building the project in native mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_NATIVE_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_NATIVE_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-lifecycle-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-lifecycle-image[`+++quarkus.buildpack.lifecycle-image+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.lifecycle-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The lifecycle image to use when building the project This is optional, but can be used to override the lifecycle present within a builder image.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_LIFECYCLE_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_LIFECYCLE_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-platform-level]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-platform-level[`+++quarkus.buildpack.platform-level+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.platform-level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The platform level to force for the build. Normally the platform level is determined from the intersection of the builder image supported levels, and the platform implementation supported levels. Sometimes it can be beneficial to force the platform to a particular version to force behavior during the build.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_PLATFORM_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_PLATFORM_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-trust-builder-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-trust-builder-image[`+++quarkus.buildpack.trust-builder-image+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.trust-builder-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Should the builder image be 'trusted' ? Trusted builders are allowed to attempt to use the `creator` lifecycle, which runs all the build phases within a single container. This is only possible for builders that do not use extensions. Running all phases in one container exposes some phases to information they may not see normally with a container-per-phase.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_TRUST_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_TRUST_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-builder-env-environment-variable-name]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-builder-env-environment-variable-name[`+++quarkus.buildpack.builder-env."environment-variable-name"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.builder-env."environment-variable-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Environment key/values to pass to buildpacks.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_BUILDER_ENV__ENVIRONMENT_VARIABLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_BUILDER_ENV__ENVIRONMENT_VARIABLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-registry-user-registry-host]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-registry-user-registry-host[`+++quarkus.buildpack.registry-user."registry-host"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.registry-user."registry-host"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Usernames to use with registry hosts


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_REGISTRY_USER__REGISTRY_HOST_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_REGISTRY_USER__REGISTRY_HOST_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-registry-password-registry-host]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-registry-password-registry-host[`+++quarkus.buildpack.registry-password."registry-host"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.registry-password."registry-host"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Passwords to use with registry hosts


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_REGISTRY_PASSWORD__REGISTRY_HOST_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_REGISTRY_PASSWORD__REGISTRY_HOST_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-registry-token-registry-host]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-registry-token-registry-host[`+++quarkus.buildpack.registry-token."registry-host"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.registry-token."registry-host"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Tokens to use with registry hosts


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_REGISTRY_TOKEN__REGISTRY_HOST_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_REGISTRY_TOKEN__REGISTRY_HOST_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-run-image]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-run-image[`+++quarkus.buildpack.run-image+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.run-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The buildpacks run image to use when building the project When not supplied, the run image is determined by the builder image. If extensions are used by the builder image, they may override the run image.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_RUN_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_RUN_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-pull-timeout-seconds]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-pull-timeout-seconds[`+++quarkus.buildpack.pull-timeout-seconds+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.pull-timeout-seconds+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Initial pull timeout for builder/run images, in seconds


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_PULL_TIMEOUT_SECONDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_PULL_TIMEOUT_SECONDS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++300+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-pull-timeout-increase-seconds]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-pull-timeout-increase-seconds[`+++quarkus.buildpack.pull-timeout-increase-seconds+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.pull-timeout-increase-seconds+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Increase pull timeout for builder/run images after failure, in seconds


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_PULL_TIMEOUT_INCREASE_SECONDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_PULL_TIMEOUT_INCREASE_SECONDS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++15+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-pull-retry-count]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-pull-retry-count[`+++quarkus.buildpack.pull-retry-count+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.pull-retry-count+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
How many times to retry an image pull after a failure


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_PULL_RETRY_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_PULL_RETRY_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++3+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-docker-host]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-docker-host[`+++quarkus.buildpack.docker-host+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.docker-host+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
DOCKER_HOST value to use. This value is normally auto-determined, and is available for override if needed. If not set, the env var DOCKER_HOST is used, if that is not set the platform will test if `podman` is available on the path, if so, it will use podman to configure the appropriate values. If `podman` is not on the path, docker is assumed, and per-platform defaults for docker are used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_DOCKER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_DOCKER_HOST+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-docker-socket]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-docker-socket[`+++quarkus.buildpack.docker-socket+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.docker-socket+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Path to the Docker socket to use. This value is normally auto-determined, and is available for override if needed. The path to the socket can vary, especially when the docker/podman daemon is running inside a VM, if useDaemon mode is true, then this path must refer to the path that can be used to mount the socket inside a container, so may refer to the path to the socket in the VM rather than the host.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_DOCKER_SOCKET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_DOCKER_SOCKET+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-use-daemon]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-use-daemon[`+++quarkus.buildpack.use-daemon+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.use-daemon+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
use Daemon mode? Should the buildpack build have the docker socket mounted into the build container(s). If this is false, then the image will be built directly as layers in a remote registry, this will probably require registry credentials to be passed. Defaults to 'true'


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_USE_DAEMON+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_USE_DAEMON+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-docker-network]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-docker-network[`+++quarkus.buildpack.docker-network+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.docker-network+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Use specified docker network during build This can be handy when building against a locally hosted docker registry, where you will require the build containers to be part of the 'host' network to enable them to access the local registry.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_DOCKER_NETWORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_DOCKER_NETWORK+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-log-level]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-log-level[`+++quarkus.buildpack.log-level+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.log-level+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Log level to use. The log level to use when executing the build phases in containers. Defaults to 'info', supported values are 'info', 'warn' and 'debug'


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_LOG_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_LOG_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++info+++`

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-buildpack_quarkus-buildpack-get-use-timestamps]] [.property-path]##link:#quarkus-container-image-buildpack_quarkus-buildpack-get-use-timestamps[`+++quarkus.buildpack.get-use-timestamps+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.buildpack.get-use-timestamps+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Should the container log information include timestamps?


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDPACK_GET_USE_TIMESTAMPS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDPACK_GET_USE_TIMESTAMPS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

|===

